sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(x=false)
       ^